# orbelican

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  tasks.py
data/: config.json  profile.json  resume.json
pelican/themes/orbelican/sass/: base.scss  responsive.scss
pelican/themes/orbelican/sass/themes/: orbit-1.scss  orbit-3.scss  orbit-4.scss  orbit-7.scss
pelican/themes/orbelican/static/css/: orbit-1.css  orbit-2.css  orbit-3.css  orbit-4.css  orbit-5.css  orbit-6.css  orbit-7.css
pelican/themes/orbelican/static/plugins/jquery/: jquery.min.js
pelican/themes/orbelican/templates/: index.html
pelican/themes/orbelican/templates/includes/: education.html  footer.html  projects.html  summary.html
pelican/themes/orbelican/templates/includes/sidebar/: infos.html  language.html  sidebar.html
sass/: base.scss  mixins.scss
sass/themes/: orbit-1.scss  orbit-2.scss  orbit-3.scss  orbit-4.scss  orbit-5.scss  orbit-6.scss
static/js/: main.js
static/plugins/fontawesome/: fontawesome.min.css
templates/: base.html  index.html
templates/includes/: analytics.html  contact.html  education.html  experience.html  footer.html  head.html  infos.html  language.html  projects.html  scripts.html  sidebar.html  skills.html  summary.html
templates/includes/sidebar/: sidebar.html  skills.html
