[metadata]
name = orbelican
version = 0.2.0
url = https://github.com/LucasVanHaaren/orbelican
author = vhash
author_email = vanhaaren.lucas+dev@gmail.com
license = MIT
license_files = LICENSE
description = A simple port of orbit-theme for Pelican to build an online resume
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords = pelican, pelican-theme, orbit, orbit-theme, resume, portfolio
classifiers =
	Framework :: Pelican :: Themes
	Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License

[options]
packages=
    pelican.themes.orbelican
zip_safe = true
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pelican
    pelican-data-files

[options.extras_require]
dev =
    libsass >= 0.20.0
    invoke
	twine

[options.package_data]
pelican.themes.orbelican = data/*, static/*, templates/*